panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyConfig(OgaConfig *config)
     * }
     */
    public static MethodHandle OgaDestroyConfig$handle() {
        return OgaDestroyConfig.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyConfig(OgaConfig *config)
     * }
     */
    public static MemorySegment OgaDestroyConfig$address() {
        return OgaDestroyConfig.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyConfig(OgaConfig *config)
     * }
     */
    public static void OgaDestroyConfig(MemorySegment config) {
        var mh$ = OgaDestroyConfig.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyConfig", config);
            }
            mh$.invokeExact(config);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyModel {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyModel");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyModel(OgaModel *model)
     * }
     */
    public static FunctionDescriptor OgaDestroyModel$descriptor() {
        return OgaDestroyModel.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyModel(OgaModel *model)
     * }
     */
    public static MethodHandle OgaDestroyModel$handle() {
        return OgaDestroyModel.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyModel(OgaModel *model)
     * }
     */
    public static MemorySegment OgaDestroyModel$address() {
        return OgaDestroyModel.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyModel(OgaModel *model)
     * }
     */
    public static void OgaDestroyModel(MemorySegment model) {
        var mh$ = OgaDestroyModel.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyModel", model);
            }
            mh$.invokeExact(model);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateGeneratorParams {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateGeneratorParams");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGeneratorParams(const OgaModel *model, OgaGeneratorParams **out)
     * }
     */
    public static FunctionDescriptor OgaCreateGeneratorParams$descriptor() {
        return OgaCreateGeneratorParams.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGeneratorParams(const OgaModel *model, OgaGeneratorParams **out)
     * }
     */
    public static MethodHandle OgaCreateGeneratorParams$handle() {
        return OgaCreateGeneratorParams.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateGeneratorParams(const OgaModel *model, OgaGeneratorParams **out)
     * }
     */
    public static MemorySegment OgaCreateGeneratorParams$address() {
        return OgaCreateGeneratorParams.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateGeneratorParams(const OgaModel *model, OgaGeneratorParams **out)
     * }
     */
    public static MemorySegment OgaCreateGeneratorParams(MemorySegment model, MemorySegment out) {
        var mh$ = OgaCreateGeneratorParams.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateGeneratorParams", model, out);
            }
            return (MemorySegment)mh$.invokeExact(model, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyGeneratorParams {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyGeneratorParams");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyGeneratorParams(OgaGeneratorParams *params)
     * }
     */
    public static FunctionDescriptor OgaDestroyGeneratorParams$descriptor() {
        return OgaDestroyGeneratorParams.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyGeneratorParams(OgaGeneratorParams *params)
     * }
     */
    public static MethodHandle OgaDestroyGeneratorParams$handle() {
        return OgaDestroyGeneratorParams.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyGeneratorParams(OgaGeneratorParams *params)
     * }
     */
    public static MemorySegment OgaDestroyGeneratorParams$address() {
        return OgaDestroyGeneratorParams.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyGeneratorParams(OgaGeneratorParams *params)
     * }
     */
    public static void OgaDestroyGeneratorParams(MemorySegment params) {
        var mh$ = OgaDestroyGeneratorParams.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyGeneratorParams", params);
            }
            mh$.invokeExact(params);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGeneratorParamsSetSearchNumber {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGeneratorParamsSetSearchNumber");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchNumber(OgaGeneratorParams *params, const char *name, double value)
     * }
     */
    public static FunctionDescriptor OgaGeneratorParamsSetSearchNumber$descriptor() {
        return OgaGeneratorParamsSetSearchNumber.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchNumber(OgaGeneratorParams *params, const char *name, double value)
     * }
     */
    public static MethodHandle OgaGeneratorParamsSetSearchNumber$handle() {
        return OgaGeneratorParamsSetSearchNumber.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchNumber(OgaGeneratorParams *params, const char *name, double value)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetSearchNumber$address() {
        return OgaGeneratorParamsSetSearchNumber.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchNumber(OgaGeneratorParams *params, const char *name, double value)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetSearchNumber(MemorySegment params, MemorySegment name, double value) {
        var mh$ = OgaGeneratorParamsSetSearchNumber.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGeneratorParamsSetSearchNumber", params, name, value);
            }
            return (MemorySegment)mh$.invokeExact(params, name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGeneratorParamsSetSearchBool {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGeneratorParamsSetSearchBool");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchBool(OgaGeneratorParams *params, const char *name, bool value)
     * }
     */
    public static FunctionDescriptor OgaGeneratorParamsSetSearchBool$descriptor() {
        return OgaGeneratorParamsSetSearchBool.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchBool(OgaGeneratorParams *params, const char *name, bool value)
     * }
     */
    public static MethodHandle OgaGeneratorParamsSetSearchBool$handle() {
        return OgaGeneratorParamsSetSearchBool.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchBool(OgaGeneratorParams *params, const char *name, bool value)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetSearchBool$address() {
        return OgaGeneratorParamsSetSearchBool.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsSetSearchBool(OgaGeneratorParams *params, const char *name, bool value)
     * }
     */
    public static MemorySegment OgaGeneratorParamsSetSearchBool(MemorySegment params, MemorySegment name, boolean value) {
        var mh$ = OgaGeneratorParamsSetSearchBool.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaGeneratorParamsSetSearchBool", params, name, value);
            }
            return (MemorySegment)mh$.invokeExact(params, name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(OgaGeneratorParams *params, int32_t max_batch_size)
     * }
     */
    public static FunctionDescriptor OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize$descriptor() {
        return OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize.DESC;
    }
